parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> pgrm_tail
Rule 2     pgrm_tail -> var_assign SEMI pgrm_tail
Rule 3     pgrm_tail -> block pgrm_tail
Rule 4     pgrm_tail -> <empty>
Rule 5     pgrm_tail -> function_def pgrm_tail
Rule 6     function_def -> NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS block
Rule 7     function_def -> NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS block
Rule 8     function_call -> NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS
Rule 9     function_call -> NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS
Rule 10    expression -> function_call
Rule 11    parameters -> expression COMMA expression
Rule 12    parameters -> parameters COMMA expression
Rule 13    parameters -> expression
Rule 14    expression -> return_stmt
Rule 15    return_stmt -> RETURN expression
Rule 16    block -> OPEN_CURLY statement_list CLOSE_CURLY
Rule 17    statement_list -> statement SEMI statement_tail
Rule 18    statement_tail -> statement SEMI statement_tail
Rule 19    statement_list -> special statement_tail
Rule 20    statement_tail -> special statement_tail
Rule 21    statement_tail -> <empty>
Rule 22    statement -> expression
Rule 23    expression -> expression DIVIDE expression
Rule 24    expression -> expression MULT expression
Rule 25    expression -> expression PLUS expression
Rule 26    expression -> expression MINUS expression
Rule 27    expression -> expression LESS_THAN expression
Rule 28    expression -> expression LESS_THAN_EQUAL expression
Rule 29    expression -> expression GREATER_THAN expression
Rule 30    expression -> expression GREATER_THAN_EQUAL expression
Rule 31    expression -> expression EQUALS_EQUALS expression
Rule 32    expression -> expression NOT_EQUAL expression
Rule 33    expression -> expression MOD expression
Rule 34    expression -> expression FLOOR_DIV expression
Rule 35    expression -> expression EXPONENT expression
Rule 36    expression -> expression AND expression
Rule 37    expression -> expression OR expression
Rule 38    expression -> NOT expression
Rule 39    expression -> OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
Rule 40    expression -> INT
Rule 41    expression -> REAL
Rule 42    expression -> STRING
Rule 43    expression -> list
Rule 44    list -> OPEN_BRACKET inner CLOSE_BRACKET
Rule 45    inner -> expression COMMA expression
Rule 46    inner -> inner COMMA expression
Rule 47    inner -> expression
Rule 48    expression -> expression OPEN_BRACKET expression CLOSE_BRACKET
Rule 49    expression -> var_assign
Rule 50    var_assign -> expression EQUALS expression
Rule 51    expression -> NAME
Rule 52    special -> condition thenBlock elseBlock
Rule 53    condition -> IF OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
Rule 54    thenBlock -> block
Rule 55    elseBlock -> ELSE block
Rule 56    elseBlock -> <empty>
Rule 57    special -> while_condition block
Rule 58    while_condition -> WHILE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
Rule 59    statement -> PRINT OPEN_PARENTHESIS expression CLOSE_PARENTHESIS

Terminals, with rules where they appear

AND                  : 36
CLOSE_BRACKET        : 44 48
CLOSE_CURLY          : 16
CLOSE_PARENTHESIS    : 6 7 8 9 39 53 58 59
COMMA                : 11 12 45 46
DIVIDE               : 23
ELSE                 : 55
EQUALS               : 50
EQUALS_EQUALS        : 31
EXPONENT             : 35
FLOOR_DIV            : 34
GREATER_THAN         : 29
GREATER_THAN_EQUAL   : 30
IF                   : 53
INT                  : 40
LESS_THAN            : 27
LESS_THAN_EQUAL      : 28
MINUS                : 26
MOD                  : 33
MULT                 : 24
NAME                 : 6 7 8 9 51
NOT                  : 38
NOT_EQUAL            : 32
OPEN_BRACKET         : 44 48
OPEN_CURLY           : 16
OPEN_PARENTHESIS     : 6 7 8 9 39 53 58 59
OR                   : 37
PLUS                 : 25
PRINT                : 59
REAL                 : 41
RETURN               : 15
SEMI                 : 2 17 18
STRING               : 42
WHILE                : 58
error                : 

Nonterminals, with rules where they appear

block                : 3 6 7 54 55 57
condition            : 52
elseBlock            : 52
expression           : 11 11 12 13 15 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 39 45 45 46 47 48 48 50 50 53 58 59
function_call        : 10
function_def         : 5
inner                : 44 46
list                 : 43
parameters           : 6 8 12
pgrm_tail            : 1 2 3 5
program              : 0
return_stmt          : 14
special              : 19 20
statement            : 17 18
statement_list       : 16
statement_tail       : 17 18 19 20
thenBlock            : 52
var_assign           : 2 49
while_condition      : 57

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . pgrm_tail
    (2) pgrm_tail -> . var_assign SEMI pgrm_tail
    (3) pgrm_tail -> . block pgrm_tail
    (4) pgrm_tail -> .
    (5) pgrm_tail -> . function_def pgrm_tail
    (50) var_assign -> . expression EQUALS expression
    (16) block -> . OPEN_CURLY statement_list CLOSE_CURLY
    (6) function_def -> . NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS block
    (7) function_def -> . NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS block
    (10) expression -> . function_call
    (14) expression -> . return_stmt
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression MULT expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression LESS_THAN_EQUAL expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression GREATER_THAN_EQUAL expression
    (31) expression -> . expression EQUALS_EQUALS expression
    (32) expression -> . expression NOT_EQUAL expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression FLOOR_DIV expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (40) expression -> . INT
    (41) expression -> . REAL
    (42) expression -> . STRING
    (43) expression -> . list
    (48) expression -> . expression OPEN_BRACKET expression CLOSE_BRACKET
    (49) expression -> . var_assign
    (51) expression -> . NAME
    (8) function_call -> . NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS
    (9) function_call -> . NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (15) return_stmt -> . RETURN expression
    (44) list -> . OPEN_BRACKET inner CLOSE_BRACKET

    $end            reduce using rule 4 (pgrm_tail -> .)
    OPEN_CURLY      shift and go to state 15
    NAME            shift and go to state 3
    NOT             shift and go to state 17
    OPEN_PARENTHESIS shift and go to state 13
    INT             shift and go to state 7
    REAL            shift and go to state 12
    STRING          shift and go to state 5
    RETURN          shift and go to state 8
    OPEN_BRACKET    shift and go to state 18

    program                        shift and go to state 1
    function_def                   shift and go to state 2
    pgrm_tail                      shift and go to state 4
    return_stmt                    shift and go to state 14
    list                           shift and go to state 16
    function_call                  shift and go to state 6
    expression                     shift and go to state 11
    var_assign                     shift and go to state 9
    block                          shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (5) pgrm_tail -> function_def . pgrm_tail
    (2) pgrm_tail -> . var_assign SEMI pgrm_tail
    (3) pgrm_tail -> . block pgrm_tail
    (4) pgrm_tail -> .
    (5) pgrm_tail -> . function_def pgrm_tail
    (50) var_assign -> . expression EQUALS expression
    (16) block -> . OPEN_CURLY statement_list CLOSE_CURLY
    (6) function_def -> . NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS block
    (7) function_def -> . NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS block
    (10) expression -> . function_call
    (14) expression -> . return_stmt
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression MULT expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression LESS_THAN_EQUAL expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression GREATER_THAN_EQUAL expression
    (31) expression -> . expression EQUALS_EQUALS expression
    (32) expression -> . expression NOT_EQUAL expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression FLOOR_DIV expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (40) expression -> . INT
    (41) expression -> . REAL
    (42) expression -> . STRING
    (43) expression -> . list
    (48) expression -> . expression OPEN_BRACKET expression CLOSE_BRACKET
    (49) expression -> . var_assign
    (51) expression -> . NAME
    (8) function_call -> . NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS
    (9) function_call -> . NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (15) return_stmt -> . RETURN expression
    (44) list -> . OPEN_BRACKET inner CLOSE_BRACKET

    $end            reduce using rule 4 (pgrm_tail -> .)
    OPEN_CURLY      shift and go to state 15
    NAME            shift and go to state 3
    NOT             shift and go to state 17
    OPEN_PARENTHESIS shift and go to state 13
    INT             shift and go to state 7
    REAL            shift and go to state 12
    STRING          shift and go to state 5
    RETURN          shift and go to state 8
    OPEN_BRACKET    shift and go to state 18

    return_stmt                    shift and go to state 14
    list                           shift and go to state 16
    function_def                   shift and go to state 2
    pgrm_tail                      shift and go to state 19
    expression                     shift and go to state 11
    function_call                  shift and go to state 6
    var_assign                     shift and go to state 9
    block                          shift and go to state 10

state 3

    (6) function_def -> NAME . OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS block
    (7) function_def -> NAME . OPEN_PARENTHESIS CLOSE_PARENTHESIS block
    (51) expression -> NAME .
    (8) function_call -> NAME . OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS
    (9) function_call -> NAME . OPEN_PARENTHESIS CLOSE_PARENTHESIS

    OPEN_PARENTHESIS shift and go to state 20
    EQUALS          reduce using rule 51 (expression -> NAME .)
    DIVIDE          reduce using rule 51 (expression -> NAME .)
    MULT            reduce using rule 51 (expression -> NAME .)
    PLUS            reduce using rule 51 (expression -> NAME .)
    MINUS           reduce using rule 51 (expression -> NAME .)
    LESS_THAN       reduce using rule 51 (expression -> NAME .)
    LESS_THAN_EQUAL reduce using rule 51 (expression -> NAME .)
    GREATER_THAN    reduce using rule 51 (expression -> NAME .)
    GREATER_THAN_EQUAL reduce using rule 51 (expression -> NAME .)
    EQUALS_EQUALS   reduce using rule 51 (expression -> NAME .)
    NOT_EQUAL       reduce using rule 51 (expression -> NAME .)
    MOD             reduce using rule 51 (expression -> NAME .)
    FLOOR_DIV       reduce using rule 51 (expression -> NAME .)
    EXPONENT        reduce using rule 51 (expression -> NAME .)
    AND             reduce using rule 51 (expression -> NAME .)
    OR              reduce using rule 51 (expression -> NAME .)
    OPEN_BRACKET    reduce using rule 51 (expression -> NAME .)


state 4

    (1) program -> pgrm_tail .

    $end            reduce using rule 1 (program -> pgrm_tail .)


state 5

    (42) expression -> STRING .

    DIVIDE          reduce using rule 42 (expression -> STRING .)
    MULT            reduce using rule 42 (expression -> STRING .)
    PLUS            reduce using rule 42 (expression -> STRING .)
    MINUS           reduce using rule 42 (expression -> STRING .)
    LESS_THAN       reduce using rule 42 (expression -> STRING .)
    LESS_THAN_EQUAL reduce using rule 42 (expression -> STRING .)
    GREATER_THAN    reduce using rule 42 (expression -> STRING .)
    GREATER_THAN_EQUAL reduce using rule 42 (expression -> STRING .)
    EQUALS_EQUALS   reduce using rule 42 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 42 (expression -> STRING .)
    MOD             reduce using rule 42 (expression -> STRING .)
    FLOOR_DIV       reduce using rule 42 (expression -> STRING .)
    EXPONENT        reduce using rule 42 (expression -> STRING .)
    AND             reduce using rule 42 (expression -> STRING .)
    OR              reduce using rule 42 (expression -> STRING .)
    OPEN_BRACKET    reduce using rule 42 (expression -> STRING .)
    EQUALS          reduce using rule 42 (expression -> STRING .)
    CLOSE_PARENTHESIS reduce using rule 42 (expression -> STRING .)
    COMMA           reduce using rule 42 (expression -> STRING .)
    SEMI            reduce using rule 42 (expression -> STRING .)
    CLOSE_BRACKET   reduce using rule 42 (expression -> STRING .)


state 6

    (10) expression -> function_call .

    DIVIDE          reduce using rule 10 (expression -> function_call .)
    MULT            reduce using rule 10 (expression -> function_call .)
    PLUS            reduce using rule 10 (expression -> function_call .)
    MINUS           reduce using rule 10 (expression -> function_call .)
    LESS_THAN       reduce using rule 10 (expression -> function_call .)
    LESS_THAN_EQUAL reduce using rule 10 (expression -> function_call .)
    GREATER_THAN    reduce using rule 10 (expression -> function_call .)
    GREATER_THAN_EQUAL reduce using rule 10 (expression -> function_call .)
    EQUALS_EQUALS   reduce using rule 10 (expression -> function_call .)
    NOT_EQUAL       reduce using rule 10 (expression -> function_call .)
    MOD             reduce using rule 10 (expression -> function_call .)
    FLOOR_DIV       reduce using rule 10 (expression -> function_call .)
    EXPONENT        reduce using rule 10 (expression -> function_call .)
    AND             reduce using rule 10 (expression -> function_call .)
    OR              reduce using rule 10 (expression -> function_call .)
    OPEN_BRACKET    reduce using rule 10 (expression -> function_call .)
    EQUALS          reduce using rule 10 (expression -> function_call .)
    CLOSE_PARENTHESIS reduce using rule 10 (expression -> function_call .)
    COMMA           reduce using rule 10 (expression -> function_call .)
    SEMI            reduce using rule 10 (expression -> function_call .)
    CLOSE_BRACKET   reduce using rule 10 (expression -> function_call .)


state 7

    (40) expression -> INT .

    DIVIDE          reduce using rule 40 (expression -> INT .)
    MULT            reduce using rule 40 (expression -> INT .)
    PLUS            reduce using rule 40 (expression -> INT .)
    MINUS           reduce using rule 40 (expression -> INT .)
    LESS_THAN       reduce using rule 40 (expression -> INT .)
    LESS_THAN_EQUAL reduce using rule 40 (expression -> INT .)
    GREATER_THAN    reduce using rule 40 (expression -> INT .)
    GREATER_THAN_EQUAL reduce using rule 40 (expression -> INT .)
    EQUALS_EQUALS   reduce using rule 40 (expression -> INT .)
    NOT_EQUAL       reduce using rule 40 (expression -> INT .)
    MOD             reduce using rule 40 (expression -> INT .)
    FLOOR_DIV       reduce using rule 40 (expression -> INT .)
    EXPONENT        reduce using rule 40 (expression -> INT .)
    AND             reduce using rule 40 (expression -> INT .)
    OR              reduce using rule 40 (expression -> INT .)
    OPEN_BRACKET    reduce using rule 40 (expression -> INT .)
    EQUALS          reduce using rule 40 (expression -> INT .)
    CLOSE_PARENTHESIS reduce using rule 40 (expression -> INT .)
    COMMA           reduce using rule 40 (expression -> INT .)
    SEMI            reduce using rule 40 (expression -> INT .)
    CLOSE_BRACKET   reduce using rule 40 (expression -> INT .)


state 8

    (15) return_stmt -> RETURN . expression
    (10) expression -> . function_call
    (14) expression -> . return_stmt
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression MULT expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression LESS_THAN_EQUAL expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression GREATER_THAN_EQUAL expression
    (31) expression -> . expression EQUALS_EQUALS expression
    (32) expression -> . expression NOT_EQUAL expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression FLOOR_DIV expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (40) expression -> . INT
    (41) expression -> . REAL
    (42) expression -> . STRING
    (43) expression -> . list
    (48) expression -> . expression OPEN_BRACKET expression CLOSE_BRACKET
    (49) expression -> . var_assign
    (51) expression -> . NAME
    (8) function_call -> . NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS
    (9) function_call -> . NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (15) return_stmt -> . RETURN expression
    (44) list -> . OPEN_BRACKET inner CLOSE_BRACKET
    (50) var_assign -> . expression EQUALS expression

    NOT             shift and go to state 17
    OPEN_PARENTHESIS shift and go to state 13
    INT             shift and go to state 7
    REAL            shift and go to state 12
    STRING          shift and go to state 5
    NAME            shift and go to state 21
    RETURN          shift and go to state 8
    OPEN_BRACKET    shift and go to state 18

    return_stmt                    shift and go to state 14
    function_call                  shift and go to state 6
    expression                     shift and go to state 23
    list                           shift and go to state 16
    var_assign                     shift and go to state 22

state 9

    (2) pgrm_tail -> var_assign . SEMI pgrm_tail
    (49) expression -> var_assign .

    SEMI            shift and go to state 24
    EQUALS          reduce using rule 49 (expression -> var_assign .)
    DIVIDE          reduce using rule 49 (expression -> var_assign .)
    MULT            reduce using rule 49 (expression -> var_assign .)
    PLUS            reduce using rule 49 (expression -> var_assign .)
    MINUS           reduce using rule 49 (expression -> var_assign .)
    LESS_THAN       reduce using rule 49 (expression -> var_assign .)
    LESS_THAN_EQUAL reduce using rule 49 (expression -> var_assign .)
    GREATER_THAN    reduce using rule 49 (expression -> var_assign .)
    GREATER_THAN_EQUAL reduce using rule 49 (expression -> var_assign .)
    EQUALS_EQUALS   reduce using rule 49 (expression -> var_assign .)
    NOT_EQUAL       reduce using rule 49 (expression -> var_assign .)
    MOD             reduce using rule 49 (expression -> var_assign .)
    FLOOR_DIV       reduce using rule 49 (expression -> var_assign .)
    EXPONENT        reduce using rule 49 (expression -> var_assign .)
    AND             reduce using rule 49 (expression -> var_assign .)
    OR              reduce using rule 49 (expression -> var_assign .)
    OPEN_BRACKET    reduce using rule 49 (expression -> var_assign .)


state 10

    (3) pgrm_tail -> block . pgrm_tail
    (2) pgrm_tail -> . var_assign SEMI pgrm_tail
    (3) pgrm_tail -> . block pgrm_tail
    (4) pgrm_tail -> .
    (5) pgrm_tail -> . function_def pgrm_tail
    (50) var_assign -> . expression EQUALS expression
    (16) block -> . OPEN_CURLY statement_list CLOSE_CURLY
    (6) function_def -> . NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS block
    (7) function_def -> . NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS block
    (10) expression -> . function_call
    (14) expression -> . return_stmt
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression MULT expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression LESS_THAN_EQUAL expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression GREATER_THAN_EQUAL expression
    (31) expression -> . expression EQUALS_EQUALS expression
    (32) expression -> . expression NOT_EQUAL expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression FLOOR_DIV expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (40) expression -> . INT
    (41) expression -> . REAL
    (42) expression -> . STRING
    (43) expression -> . list
    (48) expression -> . expression OPEN_BRACKET expression CLOSE_BRACKET
    (49) expression -> . var_assign
    (51) expression -> . NAME
    (8) function_call -> . NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS
    (9) function_call -> . NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (15) return_stmt -> . RETURN expression
    (44) list -> . OPEN_BRACKET inner CLOSE_BRACKET

    $end            reduce using rule 4 (pgrm_tail -> .)
    OPEN_CURLY      shift and go to state 15
    NAME            shift and go to state 3
    NOT             shift and go to state 17
    OPEN_PARENTHESIS shift and go to state 13
    INT             shift and go to state 7
    REAL            shift and go to state 12
    STRING          shift and go to state 5
    RETURN          shift and go to state 8
    OPEN_BRACKET    shift and go to state 18

    return_stmt                    shift and go to state 14
    list                           shift and go to state 16
    function_def                   shift and go to state 2
    pgrm_tail                      shift and go to state 25
    expression                     shift and go to state 11
    function_call                  shift and go to state 6
    var_assign                     shift and go to state 9
    block                          shift and go to state 10

state 11

    (50) var_assign -> expression . EQUALS expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . MULT expression
    (25) expression -> expression . PLUS expression
    (26) expression -> expression . MINUS expression
    (27) expression -> expression . LESS_THAN expression
    (28) expression -> expression . LESS_THAN_EQUAL expression
    (29) expression -> expression . GREATER_THAN expression
    (30) expression -> expression . GREATER_THAN_EQUAL expression
    (31) expression -> expression . EQUALS_EQUALS expression
    (32) expression -> expression . NOT_EQUAL expression
    (33) expression -> expression . MOD expression
    (34) expression -> expression . FLOOR_DIV expression
    (35) expression -> expression . EXPONENT expression
    (36) expression -> expression . AND expression
    (37) expression -> expression . OR expression
    (48) expression -> expression . OPEN_BRACKET expression CLOSE_BRACKET

    EQUALS          shift and go to state 42
    DIVIDE          shift and go to state 28
    MULT            shift and go to state 41
    PLUS            shift and go to state 32
    MINUS           shift and go to state 38
    LESS_THAN       shift and go to state 27
    LESS_THAN_EQUAL shift and go to state 34
    GREATER_THAN    shift and go to state 33
    GREATER_THAN_EQUAL shift and go to state 30
    EQUALS_EQUALS   shift and go to state 35
    NOT_EQUAL       shift and go to state 31
    MOD             shift and go to state 40
    FLOOR_DIV       shift and go to state 26
    EXPONENT        shift and go to state 37
    AND             shift and go to state 29
    OR              shift and go to state 36
    OPEN_BRACKET    shift and go to state 39


state 12

    (41) expression -> REAL .

    DIVIDE          reduce using rule 41 (expression -> REAL .)
    MULT            reduce using rule 41 (expression -> REAL .)
    PLUS            reduce using rule 41 (expression -> REAL .)
    MINUS           reduce using rule 41 (expression -> REAL .)
    LESS_THAN       reduce using rule 41 (expression -> REAL .)
    LESS_THAN_EQUAL reduce using rule 41 (expression -> REAL .)
    GREATER_THAN    reduce using rule 41 (expression -> REAL .)
    GREATER_THAN_EQUAL reduce using rule 41 (expression -> REAL .)
    EQUALS_EQUALS   reduce using rule 41 (expression -> REAL .)
    NOT_EQUAL       reduce using rule 41 (expression -> REAL .)
    MOD             reduce using rule 41 (expression -> REAL .)
    FLOOR_DIV       reduce using rule 41 (expression -> REAL .)
    EXPONENT        reduce using rule 41 (expression -> REAL .)
    AND             reduce using rule 41 (expression -> REAL .)
    OR              reduce using rule 41 (expression -> REAL .)
    OPEN_BRACKET    reduce using rule 41 (expression -> REAL .)
    EQUALS          reduce using rule 41 (expression -> REAL .)
    CLOSE_PARENTHESIS reduce using rule 41 (expression -> REAL .)
    COMMA           reduce using rule 41 (expression -> REAL .)
    SEMI            reduce using rule 41 (expression -> REAL .)
    CLOSE_BRACKET   reduce using rule 41 (expression -> REAL .)


state 13

    (39) expression -> OPEN_PARENTHESIS . expression CLOSE_PARENTHESIS
    (10) expression -> . function_call
    (14) expression -> . return_stmt
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression MULT expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression LESS_THAN_EQUAL expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression GREATER_THAN_EQUAL expression
    (31) expression -> . expression EQUALS_EQUALS expression
    (32) expression -> . expression NOT_EQUAL expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression FLOOR_DIV expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (40) expression -> . INT
    (41) expression -> . REAL
    (42) expression -> . STRING
    (43) expression -> . list
    (48) expression -> . expression OPEN_BRACKET expression CLOSE_BRACKET
    (49) expression -> . var_assign
    (51) expression -> . NAME
    (8) function_call -> . NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS
    (9) function_call -> . NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (15) return_stmt -> . RETURN expression
    (44) list -> . OPEN_BRACKET inner CLOSE_BRACKET
    (50) var_assign -> . expression EQUALS expression

    NOT             shift and go to state 17
    OPEN_PARENTHESIS shift and go to state 13
    INT             shift and go to state 7
    REAL            shift and go to state 12
    STRING          shift and go to state 5
    NAME            shift and go to state 21
    RETURN          shift and go to state 8
    OPEN_BRACKET    shift and go to state 18

    return_stmt                    shift and go to state 14
    function_call                  shift and go to state 6
    expression                     shift and go to state 43
    list                           shift and go to state 16
    var_assign                     shift and go to state 22

state 14

    (14) expression -> return_stmt .

    DIVIDE          reduce using rule 14 (expression -> return_stmt .)
    MULT            reduce using rule 14 (expression -> return_stmt .)
    PLUS            reduce using rule 14 (expression -> return_stmt .)
    MINUS           reduce using rule 14 (expression -> return_stmt .)
    LESS_THAN       reduce using rule 14 (expression -> return_stmt .)
    LESS_THAN_EQUAL reduce using rule 14 (expression -> return_stmt .)
    GREATER_THAN    reduce using rule 14 (expression -> return_stmt .)
    GREATER_THAN_EQUAL reduce using rule 14 (expression -> return_stmt .)
    EQUALS_EQUALS   reduce using rule 14 (expression -> return_stmt .)
    NOT_EQUAL       reduce using rule 14 (expression -> return_stmt .)
    MOD             reduce using rule 14 (expression -> return_stmt .)
    FLOOR_DIV       reduce using rule 14 (expression -> return_stmt .)
    EXPONENT        reduce using rule 14 (expression -> return_stmt .)
    AND             reduce using rule 14 (expression -> return_stmt .)
    OR              reduce using rule 14 (expression -> return_stmt .)
    OPEN_BRACKET    reduce using rule 14 (expression -> return_stmt .)
    EQUALS          reduce using rule 14 (expression -> return_stmt .)
    CLOSE_PARENTHESIS reduce using rule 14 (expression -> return_stmt .)
    COMMA           reduce using rule 14 (expression -> return_stmt .)
    SEMI            reduce using rule 14 (expression -> return_stmt .)
    CLOSE_BRACKET   reduce using rule 14 (expression -> return_stmt .)


state 15

    (16) block -> OPEN_CURLY . statement_list CLOSE_CURLY
    (17) statement_list -> . statement SEMI statement_tail
    (19) statement_list -> . special statement_tail
    (22) statement -> . expression
    (59) statement -> . PRINT OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (52) special -> . condition thenBlock elseBlock
    (57) special -> . while_condition block
    (10) expression -> . function_call
    (14) expression -> . return_stmt
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression MULT expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression LESS_THAN_EQUAL expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression GREATER_THAN_EQUAL expression
    (31) expression -> . expression EQUALS_EQUALS expression
    (32) expression -> . expression NOT_EQUAL expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression FLOOR_DIV expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression AND expression
    (37) expression -> . expression OR expression
    (38) expression -> . NOT expression
    (39) expression -> . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (40) expression -> . INT
    (41) expression -> . REAL
    (42) expression -> . STRING
    (43) expression -> . list
    (48) expression -> . expression OPEN_BRACKET expression CLOSE_BRACKET
    (49) expression -> . var_assign
    (51) expression -> . NAME
    (53) condition -> . IF OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (58) while_condition -> . WHILE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (8) function_call -> . NAME OPEN_PARENTHESIS parameters CLOSE_PARENTHESIS
    (9) function_call -> . NAME OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (15) return_stmt -> . RETURN expression
    (44) list -> . OPEN_BRACKET inner CLOSE_BRACKET
    (50) var_assign -> . expression EQUALS expression

    PRINT           shift and go to state 49
    NOT             shift and go to state 17
    OPEN_PARENTHESIS shift and go to state 13
    INT             shift and go to state 7
    REAL            shift and go to state 12
    STRING          shift and go to state 5
    NAME            shift and go to state 21
    IF              shift and go to state 52
    WHILE           shift and go to state 48
    RETURN          shift and go to state 8
    OPEN_BRACKET    shift and go to state 18

    statement                      shift and go to state 46
    statement_list                 shift and go to state 50
    return_stmt                    shift and go to state 14
    condition                      shift and go to state 44
    function_call                  shift and go to state 6
    expression                     shift and go to state 51
    list                           shift and go to state 16
    special                        shift and go to state 47
    while_condition                shift and go to state 45
    var_assign                     shift and go to state 22

state 16

    (43) expression -> list .

    DIVIDE          reduce using rule 43 (expression -> list .)
    MULT            reduce using rule 43 (expression -> list .)
    PLUS            reduce using rule 43 (expression -> list .)
    MINUS           reduce using rule 43 (expression -> list .)
    LESS_THAN       reduce using rule 43 (expression -> list .)
    LESS_THAN_EQUAL reduce using rule 43 (expression -> list .)
    GREATER_THAN    reduce using rule 43 (expression -> list .)
    GREATER_THAN_EQUAL reduce using rule 43 (expression -> list .)
    EQUALS_EQUALS   reduce using rule 43 (expression -> list .)
    NOT_EQUAL       reduce using rule 43 (expression -> list .)
    MOD             reduce using rule 43 (expression -> list .)
    FLOOR_DIV       reduce using rule 43 (expression -> list .)
    EXPONENT        reduce using rule 43 (expression -> list .)
    AND             reduce using rule 43 (expression -> list .)
    OR              reduce using rule 43 (expression -> list .)
    OPEN_BRACKET    reduce using rule 43 (expression -> list .)
    EQUALS          reduce using rule 43 (expression -> list .)
    CLOSE_PARENTHESIS reduce using rule 43 (expression -> list .)
    COMMA           reduce using rule 43 (expression -> list .)
    SEMI            reduce using rule 43 (expression -> list .)
    CLOSE_BRACKET   reduce using rule 43 (expression -> list .)


state 17
